Fixing the flickering of displaying new candidates

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -357,6 +357,17 @@ ul.about_ul li {
     padding-top: 15px;
 }
 
+#a-craftman {
+  vertical-align: bottom;
+  display:block;
+  height:400px;
+}
+
+/*#a-craftman-big-picture {
+  position: absolute;
+  bottom: 0;
+}*/
+
 /***********************/
 /*      Technos           */
 /***********************/
